correction du design de la pages 2 alignement de la nav avec le titre padding ajouter sur le conatiner et sur la page principale ajout de l'attr rel pour les liens du footer

--- a/style.css
+++ b/style.css
@@ -39,11 +39,6 @@ a:hover {
   position: relative;
 }
 
-.bloc .container {
-  padding-left: 0;
-  padding-right: 0;
-}
-
 .bloc-lg {
   padding: 100px 50px;
 }
@@ -329,6 +324,7 @@ a:hover {
   float: left;
   margin-top: 4px;
   font-size: 16px;
+  list-style: none;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -368,7 +364,7 @@ a:hover {
 @media (min-width: 768px) {
   .site-navigation {
     position: absolute;
-    top: 50%;
+    top: 30%;
     right: 20px;
     transform: translate(0, -50%);
     -webkit-transform: translateY(-50%);
@@ -657,6 +653,7 @@ a {
   font-family: "helvetica";
   font-weight: 400;
   color: #575757 !important;
+  text-decoration: none;
 }
 
 .container {
@@ -695,8 +692,9 @@ p {
 }
 
 .name-description {
+  margin-top: 30px;
   font-family: "helvetica";
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 100;
 }
 
